fixed chapters display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,59 @@ form{
   margin-top: 5vw;
 }*/
 
+.chapterT{
+  position: relative; 
+  bottom: 8px;
+}
+
+.chapterN{
+  margin-left: auto;
+  position: relative; 
+  bottom: 8px;
+}
+
+.chapterL{
+  display: flex;
+  flex-direction: row; 
+  height: 50px;
+}
+
+.chButton{
+  color: #cae3c6;
+  margin-top: 10px;
+  margin-bottom: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background: #415865;
+  border-radius: 5px;
+  display: inline-block;
+  border: solid;
+  width: 5vw;
+  height: 1.5vw;
+}
+
+.chButton:hover{
+  color: azure;
+}
+
+.arrowButtons{
+  color: #cae3c6;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background: #415865;
+  border-radius: 5px;
+  display: inline-block;
+  border: solid;
+  width: 2vw;
+  height: 2vw;
+}
+
+.arrowButtons:hover{
+  color: azure;
+}
+
 @media all and (max-width: 360px){
   .hApp {
     height: 100vh;
@@ -146,6 +199,52 @@ form{
     padding-top: 2vw;
     margin-left: -1.5vw;
   }
+
+  .viewManga{
+    background-color: #cae3c6;
+  }
+
+  .viewChaptersM{
+    background-color: #3a3b3c;
+    width: 100%;
+    height: 1500px;
+  }
+
+  .viewChaptersC{
+    background-color: #3a3b3c;
+    width: 100%;
+    height: auto;
+  }
+
+  .chapterL{
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    margin-top: -10px;
+    margin-bottom: -10px;
+  }
+
+  .chapterN{
+    margin-left: auto;
+    position: relative; 
+    bottom: 0px;
+  }
+  
+  .chapterT{
+    position: relative; 
+    bottom: 0px;
+  }
+
+  .chButton{
+    width: 70px;
+    height: 25px;
+  }
+  
+  .arrowButtons{
+    width: 30px;
+    height: 30px;
+  }
+
 }
 
 @media all and (max-width: 411px){
@@ -181,9 +280,55 @@ form{
     padding-top: 2vw;
     margin-left: -1.5vw;
   }
+
+  .viewChaptersM{
+    background-color: #3a3b3c;
+    width: 100%;
+    height: 1500px;
+  }
+
+  .viewChaptersC{
+    background-color: #3a3b3c;
+    width: 100%;
+    height: auto;
+  }
+
+  .chapterL{
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    margin-top: -10px;
+    margin-bottom: -10px;
+  }
+
+  .chapterN{
+    margin-left: auto;
+    position: relative; 
+    bottom: 0px;
+  }
+  
+  .chapterT{
+    position: relative; 
+    bottom: 0px;
+  }
+
+  .chButton{
+    width: 70px;
+    height: 25px;
+  }
+  
+  .arrowButtons{
+    width: 30px;
+    height: 30px;
+  }
 }
 
-.viewChapters{
+.viewChaptersC{
+  background-color: #3a3b3c;
+  width: 100vw;
+}
+
+.viewChaptersM{
   background-color: #3a3b3c;
   width: 100vw;
 }
@@ -229,42 +374,6 @@ form{
 }
 
 .chapterM:hover{
-  color: azure;
-}
-
-.chButton{
-  color: #cae3c6;
-  margin-top: 4px;
-  margin-bottom: 2px;
-  padding-left: 10px;
-  padding-right: 10px;
-  background: #415865;
-  border-radius: 5px;
-  display: inline-block;
-  border: solid;
-  width: 5vw;
-  height: 1.5vw;
-}
-
-.chButton:hover{
-  color: azure;
-}
-
-.arrowButtons{
-  color: #cae3c6;
-  margin-top: 2px;
-  margin-bottom: 2px;
-  margin-left: 5px;
-  margin-right: 5px;
-  background: #415865;
-  border-radius: 5px;
-  display: inline-block;
-  border: solid;
-  width: 2vw;
-  height: 2vw;
-}
-
-.arrowButtons:hover{
   color: azure;
 }
 
